# anemone

./: README.md
anemone/: CMakeLists.txt
anemone/anemone/application/: Window.cpp  Window.hpp  WindowState.h
anemone/anemone/application/win32/: ConsoleWindowWin32.cpp  ConsoleWindowWin32.hpp  GameHostWin32.cpp  GameHostWin32.hpp  WindowWin32.cpp  WindowWin32.hpp
anemone/anemone/basic/: ConditionalCompilation.h
anemone/anemone/platform/win32/: PrerequisiteWin32.h  RunnerWin32.cpp  RunnerWin32.hpp
anemone/cmake/anemone/: CMakeLists.txt  application.cmake  basic.cmake  cmake_install.cmake  platform.cmake
anemone/examples/game/: CMakeLists.txt
anemone/examples/game/platform/win32/: Main.cpp
